@@ -1,3 +1,8 @@
+2017-01-06  John Dennis  <jdennis@redhat.com> 0.5
+  * fix bug with default ports 80 and 443
+    default ports should not be present in URL
+  * add utility get_entity_id_from_metadata()
+  * add get_server_info() REST query
 2016-06-07  John Dennis  <jdennis@redhat.com> 0.4
   * add methods to add/remove client redirect URI
   * add function to parse SP metadata to extract
